--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bookers2</title>
+    <title>Bookers</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -9,7 +9,55 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  <header style="background-color: black;">
+    <div class="container">
+    <nav class="nav navbar-nav navbar-left">
+      <h2 style="color: white;">Bookers</h2>
+    </nav>
+    <div id="slidemenu">
+      <ul class="nav navbar-nav navbar-right" data-hover="dropdown" data-animations="zoomIn fadeIn fadeInUp fadeIn">
+
+        <!--この下はコピペしただけなので、Bookersにあわせて変更していく必要あり（名前）、遷移先リンク）-->
+
+      <% if user_signed_in? %>
+        <li class="">
+          <%= link_to "Home", user_path(current_user.id) %>
+        </li>
+        <li class="">
+          <%= link_to "Users", users_path %>
+        </li>
+        <li class="">
+          <%= link_to "Books", books_path %>
+        </li>
+        <li class="">
+          <%= link_to "logout", destroy_user_session_path, method: :delete %>
+        </li>
+      <% else %>
+      <li class="">
+          <%= link_to "Home", root_path %>
+        </li>
+        <li class="">
+          <%= link_to "About", home_about_path %>
+        </li>
+        <li class="">
+          <%= link_to "sign up", new_user_registration_path %>
+        </li>
+        <li class="">
+          <%= link_to "login", new_user_session_path %>
+        </li>
+      <% end %>
+     </ul>
+   </div>
+   </div>
+
+  </header>
+
   <body>
+
     <%= yield %>
+
+  <div class="quote" style="text-align: right; margin-right: 50px;">
+    <p>CopyRight Infratop.inc</p>
+  </div>
   </body>
 </html>
