--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,10 +9,9 @@
     <div class="col-xs-3">
     <h1>User info</h1>
       <!--後で付け加える-->
-      <p>
-        <strong>Image</strong>
-      </p>
+        <br>
         <%= attachment_image_tag current_user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "100x100" %>
+        <br><br>
         <table class="table">
             <tbody>
               <tr>
@@ -28,25 +27,32 @@
          </table>
 
         <% if current_user %>
-          <p><%= link_to "Profile Edit", edit_user_path(current_user), class: "pull-right" %></p>
-           <% else %>
-          <p>うまく表示されていない</p>
+          <p><%= link_to "Profile Edit", edit_user_path(current_user), class: "pull-right col-xs-12 btn btn-default glyphicon glyphicon-wrench" %></p>
+        <% else %>
+          <p><%= link_to "Profile", user_path(@book.user), class: "pull-right col-xs-12 btn btn-default glyphicon glyphicon-tasks" %></p>
         <% end %>
 
-      <h3>New book</h3>
+     <br>
+      <h1>New book</h1>
 
       <%= render 'error_form', locals: { book: @book } %>
       <%= form_with model:@book, local:true do |f| %>
 
-      <h4>title</h4>
 
-      <%= f.text_field :title %>
+      <h4>Title</h4>
+      <div class="title">
+      <%= f.text_field :title, class: "col-xs-12 pull-right" %>
+      </div>
+      <br>
 
-      <h4>opinion</h4>
+      <h4>Opinion</h4>
+      <div class="opinion">
+      <%= f.text_area :body, class: "col-xs-12 pull-right" %><br>
+      </div>
 
-      <%= f.text_area :body %><br>
-
-      <%= f.submit 'Create Book' %>
+      <div class="create" style="padding-top: 20px;">
+      <%= f.submit 'Create Book', class: "col-xs-12 pull-right btn btn-primary" %>
+      </div>
 
       <% end %>
 
@@ -58,8 +64,8 @@
 <table class="table table-striped">
   <tr>
     <th></th>
-    <th width="200">title</th>
-    <th width="500">opinion</th>
+    <th width="200">Title</th>
+    <th width="500">Opinion</th>
     <% if @book.present? %>
       <% @books.each do |book| %>
     </tr>
@@ -67,7 +73,7 @@
       <td>
         <!--この画像とtitleがうまく表示されない-->
       <%= link_to user_path(book.user) do %>
-      <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "20x20" %>
+      <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "50x50" %>
       <% end %>
       </td>
       <td>
